# wasm-zeroize

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json.template
.github/workflows/: ci.yml  wasm-tests.yml
examples/browser/: index.html
examples/node/: example.js
src/: lib.rs
