[package]
name = "wasm-zeroize"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly module for secure sensitive data handling with automatic memory zeroization"
license = "MIT"
repository = "https://github.com/yourusername/wasm-zeroize"
readme = "README.md"
keywords = ["wasm", "security", "zeroize", "memory"]
categories = ["wasm", "web-programming", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
zeroize = "1.5"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
